# MemChinesePalace

./: .gitignore  README.md  pyproject.toml
examples/: 01_compression.py  02_palace_workflow.py  03_mcp_setup.py
memchinesepalace/: __init__.py  cli.py  compressor.py  config.py  knowledge_graph.py  layers.py  mcp_server.py  miner.py  palace.py  searcher.py
tests/: test_core.py
