[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "memchinesepalace"
version = "0.2.0"
description = "Classical Chinese as the ultimate LLM memory compression core — 文言文记忆宫殿"
readme = "README.md"
license = "MIT"
authors = [
    {name = "MemChinesePalace Contributors"}
]
keywords = ["llm", "memory", "agent", "classical-chinese", "compression", "mcp", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "chromadb>=0.4.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
wenjian = "memchinesepalace.cli:main"

[project.urls]
Homepage = "https://github.com/Chandler-Sun/MemChinesePalace"
Repository = "https://github.com/Chandler-Sun/MemChinesePalace"
Issues = "https://github.com/Chandler-Sun/MemChinesePalace/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["memchinesepalace*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
